# gallery-serverless

./: .gitignore  build.sh  delete.js  index.js  items.js  package-lock.json  package.json  serverless.yml  thumbs.js
rust-gallery/: Cargo.toml
rust-gallery/src/: main.rs  thumb.rs
