[package]
name = "rust-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
tokio = { version = "1", features = ["full"] }
image = "0.24.5"
jpeg-decoder = { path = "../../jpeg-decoder" }
tokio-util = "0.7.4"
bytes = "1.3.0"
