[package]
name = "rust-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
tokio = { version = "1", features = ["full"] }
image = "0.24.7"
jpeg-decoder = { path = "../../jpeg-decoder" }
tokio-util = "0.7.8"
bytes = "1.4.0"
